--- a/css/monitoramento.css
+++ b/css/monitoramento.css
@@ -62,3 +62,12 @@
     top: 10px;
     right: 10px;
 }
+
+.cartao-erro {
+    background-color: #f8d7da;
+    color: #721c24;
+    padding: 10px;
+    margin: 5px;
+    border: 1px solid #f5c6cb;
+    border-radius: 5px;
+}
