--- a/css/monitoramento.css
+++ b/css/monitoramento.css
@@ -9,6 +9,11 @@
     position: relative;
     padding: 5px;
     margin: 2px;
+    box-shadow: 5px 3px 3px rgba(0, 0, 0, 0.5);
+}
+
+.cartao:hover {
+  transform: scale(1.03);
 }
 
 .cartao-indisponivel {
@@ -70,4 +75,24 @@
     margin: 5px;
     border: 1px solid #f5c6cb;
     border-radius: 5px;
+}
+
+#cartoes {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 20px;
+    padding: 10px;
+}
+
+.table-style{
+    margin: 10px;
+}
+
+tr>td {
+    text-transform: capitalize;
+}
+
+.titulo-tabela {
+    text-align: center;
 }
